--- a/app/src/main/res/layout/release_card.xml
+++ b/app/src/main/res/layout/release_card.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:elevation="1dp"
-    app:strokeWidth="1dp"
-    app:strokeColor="#E46C0A"
     app:cardCornerRadius="8dp"
-    app:cardElevation="1dp">
+    app:cardElevation="1dp"
+    app:strokeColor="#E46C0A"
+    app:strokeWidth="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <View
-            android:layout_marginTop="2dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/imgIcon"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="30dp"
             android:layout_width="2dp"
             android:layout_height="20dp"
-            android:background="#77000000"/>
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="2dp"
+            android:background="#77000000"
+            app:layout_constraintBottom_toTopOf="@id/imgIcon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imgIcon"
@@ -38,15 +37,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="3dp"
-            app:layout_constraintTop_toBottomOf="@id/imgIcon"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="30dp"
             android:layout_width="2dp"
             android:layout_height="20dp"
-            android:background="#77000000" />
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="3dp"
+            android:background="#77000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgIcon" />
 
         <TextView
             android:layout_width="0dp"
@@ -54,8 +53,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:text="Carrefour"
-            android:textSize="20dp"
+            android:text="@string/origin"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgIcon"
@@ -67,8 +66,8 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="R$ 250,00"
-            android:textSize="18dp"
+            android:text="@string/value"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
