--- a/app/src/main/res/layout/release_card.xml
+++ b/app/src/main/res/layout/release_card.xml
@@ -48,6 +48,7 @@
             app:layout_constraintTop_toBottomOf="@id/imgIcon" />
 
         <TextView
+            android:id="@+id/originName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -61,12 +62,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/value"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/value"
+            android:textColor="#C15700"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
