--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/releasesRecyclerView"
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
