--- a/app/src/main/res/layout/release_card.xml
+++ b/app/src/main/res/layout/release_card.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp"
     android:elevation="1dp"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="8dp"
     app:cardElevation="1dp"
     app:strokeColor="#E46C0A"
@@ -55,6 +59,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/origin"
+            android:textColor="@color/primary_color"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
