--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,7 +7,7 @@
     tools:context=".app.view.fragments.DetailsFragment">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/includeToolbar"
         layout="@layout/toolbar"/>
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -16,7 +16,7 @@
         android:layout_height="100dp"
         android:src="@drawable/ic_money"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/includeToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="32dp" />
