--- a/app/src/main/res/layout/release_card.xml
+++ b/app/src/main/res/layout/release_card.xml
@@ -28,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imgIcon"
             android:layout_width="30dp"
             android:layout_height="30dp"
